完善获取系统权限流程,温习java类加载,初始化过程

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="hello_world">Hello world!</string>
     <string name="ip">http://192.168.0.36:8080/json.txt</string>
     <string name="sample_device_admin_description">获取系统权限模板代码描述</string>
-    <string name="sample_device_admin">获取系统权限模板代码</string>
+    <string name="sample_device_admin">使用此功能必须获取系统权限,否则无法正常使用</string>
 
 </resources>
